--- a/css/style.scss
+++ b/css/style.scss
@@ -307,6 +307,9 @@ body {
                 width: 100%;
                 padding-left: 80px;
                 padding-right: 20px;
+                .center-content {
+                    max-width: 100%;
+                }
             }
             .pool-list {
                 display: flex;
@@ -712,6 +715,28 @@ $color-stack:
       }
       
 }
+.load-wrapper {
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    background: #ffffff;
+    z-index: 9999;
+    .loader {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 100px;
+        width: 200px;
+        transform: translate(-50%, -50%);
+        background: url(./../img/logo-loader.svg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+}
 @media screen and (max-width: 1250px) {
     .page-cont {
         padding: 0px;
@@ -823,6 +848,10 @@ $color-stack:
                 background: #fff !important;
             }
         }
+    }
+    .page-cont .right-side .page-content .pool-list .pool-item .show-pool .tooltips {
+        left: auto;
+        right: 5px;
     }
 }
 @media screen and (max-width: 900px) {
