--- a/css/style.scss
+++ b/css/style.scss
@@ -322,6 +322,10 @@ body {
                     border-radius: 25px;
                     padding: 25px 40px;
                     margin-bottom: 20px;
+                    transition: transform 0.3s ease-in;
+                    &:hover {
+                        transform: translateY(-5px);
+                    }
                     .pool-row {
                         display: flex;
                         align-content: center;
@@ -546,6 +550,29 @@ body {
         text-decoration: none;
         outline: none;
         border: none;
+        display: block;
+    }
+    .btn-putInfo {
+        position: relative;
+        transition: transform 0.3s ease-in;
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            right: 0px;
+            bottom: 0px;
+            box-shadow: 0px 4px 4px rgba(255, 114, 98, 0.3);
+            border-radius: 25px;
+            opacity: 0;
+            transition: opacity 0.3s ease-in;
+        }
+        &.shadowed {
+            transform: translateY(-3px);
+            &::before {
+                opacity: 1;
+            }
+        }
     }
 }
 
