--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ body {
   background: transparent;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   width: 100%;
-  max-height: 48px;
+  max-height: 34px;
   min-height: 14px;
 }
 
@@ -461,7 +461,18 @@ body {
 }
 
 .page-cont .left-side .bottom-content .faq-block {
-  display: none;
+  pointer-events: none;
+  opacity: 0;
+  height: 0px;
+  width: 0px;
+  overflow: hidden;
+}
+
+.page-cont .left-side .bottom-content .faq-block.visible {
+  pointer-events: all;
+  opacity: 1;
+  height: auto;
+  width: auto;
 }
 
 .page-cont .left-side .faq-block {
@@ -1948,6 +1959,9 @@ body {
   }
   .page-cont .left-side .bottom-content .chat-wrapper.expanded {
     top: 70px;
+  }
+  .page-cont .left-side .bottom-content .chat-wrapper.expanded .messages-block {
+    height: calc(100% - 170px);
   }
   .page-cont .left-side .logo {
     padding-top: 10px;
