--- a/css/style.scss
+++ b/css/style.scss
@@ -290,7 +290,7 @@ body {
                         background: transparent;
                         border-bottom:  1px solid rgba(0, 0, 0, 0.5);
                         width: 100%;
-                        max-height: 48px;
+                        max-height: 34px;
                         min-height: 14px;
                         &::-webkit-scrollbar-track {
                             box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -333,7 +333,17 @@ body {
                 }
             }
             .faq-block {
-                display: none;
+                pointer-events: none;
+                opacity: 0;
+                height: 0px;
+                width: 0px;
+                overflow: hidden;
+                &.visible {
+                    pointer-events: all;
+                    opacity: 1;
+                    height: auto;
+                    width: auto;
+                }
             }
         }
         .faq-block {
@@ -1457,8 +1467,13 @@ $color-stack:
                 }
             }
             .bottom-content {
-                .chat-wrapper.expanded {
-                    top: 70px;
+                .chat-wrapper {
+                    &.expanded {
+                        top: 70px;
+                        .messages-block {
+                            height: calc(100% - 170px);
+                        }
+                    }
                 }
             }
             .logo {
