--- a/css/style.css
+++ b/css/style.css
@@ -45,23 +45,8 @@ table {
           box-sizing: border-box;
 }
 
-*::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  background-color: #fff;
-}
-
 *::-webkit-scrollbar {
-  width: 10px;
-  background-color: #fff;
-}
-
-*::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
-          box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
-  background-color: #000000;
+  width: 0px;
 }
 
 html, body {
@@ -688,6 +673,12 @@ body {
   -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  max-width: 100%;
 }
 
 .page-cont .right-side .page-content .center-block {
@@ -778,6 +769,11 @@ body {
 
 .page-cont .right-side .page-content .unfinished-pools-block .pools-wrap {
   width: calc(100% - 120px);
+}
+
+.page-cont .right-side .page-content .unfinished-pools-block .pools-wrap .unfinished-pools-list {
+  width: 100%;
+  max-width: 100%;
 }
 
 .page-cont .right-side .page-content .unfinished-pools-block .pools-wrap .pools-item {
@@ -1230,6 +1226,10 @@ body {
   padding-left: 80px;
 }
 
+.page-cont .right-side .page-content .right-block ~ .center-block {
+  max-width: calc(100% - 490px);
+}
+
 .page-cont .right-side .statistic-block .statistic-header {
   padding-bottom: 30px;
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
@@ -1536,6 +1536,10 @@ body {
   opacity: 1;
 }
 
+.page-cont .apexcharts-canvas {
+  max-width: 100%;
+}
+
 .apexcharts-canvas .apexcharts-xaxis-tick {
   display: none;
 }
@@ -1801,6 +1805,9 @@ body {
     min-width: 460px;
     padding-left: 50px;
   }
+  .page-cont .right-side .page-content .right-block ~ .center-block {
+    max-width: calc(100% - 460px);
+  }
   .page-cont .right-side .page-content .unfinished-pools-block .pools-wrap {
     width: calc(100% - 100px);
   }
@@ -1898,6 +1905,9 @@ body {
     min-width: 400px;
     padding-left: 0px;
   }
+  .page-cont .right-side .page-content .right-block ~ .center-block {
+    max-width: calc(100% - 400px);
+  }
   .page-cont .right-side .page-content .pool-list .pool-item {
     border-radius: 25px;
     padding: 15px 20px;
@@ -1908,6 +1918,10 @@ body {
   .page-cont .right-side .page-content .right-block {
     width: 300px;
     min-width: 300px;
+    overflow: hidden;
+  }
+  .page-cont .right-side .page-content .right-block ~ .center-block {
+    max-width: calc(100% - 300px);
   }
   .page-cont .right-side .statistic-block .blocks-testStatistics .block {
     width: calc(50% - 5px);
@@ -2016,6 +2030,9 @@ body {
   .page-cont .right-side .page-content .right-block {
     width: 100%;
     padding: 20px;
+  }
+  .page-cont .right-side .page-content .right-block ~ .center-block {
+    max-width: 100%;
   }
 }
 
