--- a/css/style.scss
+++ b/css/style.scss
@@ -46,19 +46,8 @@ table {
     border-spacing: 0; }
 * {
     box-sizing: border-box;
-    &::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-        border-radius: 5px;
-        background-color: #fff;
-    }
     &::-webkit-scrollbar {
-        width: 10px;
-        background-color: #fff;
-    }
-    &::-webkit-scrollbar-thumb {
-        border-radius: 5px;
-        box-shadow: inset 0 0 3px rgba(0,0,0,.1);
-        background-color: #000000;
+        width: 0px;
     }
 }
 
@@ -492,6 +481,8 @@ body {
             display: flex;
             align-items: flex-start;
             justify-content: flex-start;
+            flex-direction: row-reverse;
+            max-width: 100%;
             .center-block {
                 height: 100%;
                 width: 100%;
@@ -551,6 +542,10 @@ body {
                 }
                 .pools-wrap {
                     width: calc(100% - 120px);
+                    .unfinished-pools-list {
+                        width: 100%;
+                        max-width: 100%;
+                    }
                     .pools-item {
                         background: #F5F5F7;
                         border-radius: 14px;
@@ -864,6 +859,9 @@ body {
                 width: 490px;
                 min-width: 490px;
                 padding-left: 80px;
+                & ~ .center-block {
+                    max-width: calc(100% - 490px);
+                }
             }
         }
         .statistic-block {
@@ -1092,6 +1090,9 @@ body {
             }
         }
     }
+    .apexcharts-canvas {
+        max-width: 100%;
+    }
 }
 
 .apexcharts-canvas {
@@ -1293,6 +1294,9 @@ $color-stack:
                     width: 460px;
                     min-width: 460px;
                     padding-left: 50px;
+                    & ~ .center-block {
+                        max-width: calc(100% - 460px);
+                    }
                 }
                 .unfinished-pools-block {
                     .pools-wrap {
@@ -1387,6 +1391,9 @@ $color-stack:
                     width: 400px;
                     min-width: 400px;
                     padding-left: 0px;
+                    & ~ .center-block {
+                        max-width: calc(100% - 400px);
+                    }
                 }
                 .pool-list .pool-item {
                     border-radius: 25px;
@@ -1404,6 +1411,10 @@ $color-stack:
                 .right-block {
                     width: 300px;
                     min-width: 300px;
+                    overflow: hidden;
+                    & ~ .center-block {
+                        max-width: calc(100% - 300px);
+                    }
                 }
             }
             .statistic-block {
@@ -1525,6 +1536,9 @@ $color-stack:
         .right-block {
             width: 100%;
             padding: 20px;
+            & ~ .center-block {
+                max-width: 100%;
+            }
         }
     }
 }
